[tool.poetry]
name = "issue2test"
authors = ["nashid, islem"]
version = "0.0.0"
description = "issue2test"
license = "Apache 2.0"
readme = "README.md"

packages = [
    { include = "issue2test" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jinja2 = "^3.1.3"
beautifulsoup4 = "^4.12.3"
poetry-dynamic-versioning = "^1.3.0"

# LLM Dependencies
litellm = { git = "https://github.com/mrT23/litellm.git" }
tiktoken = "^0.7.0"
openai = "^1.32.0"
boto3 = "^1.34.121"
google-cloud-aiplatform = "^1.54.0"
numpy = "^1.26.0"
wandb = "^0.17.1"
dynaconf = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pyinstaller = "^6.6.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pytest-timeout = "^2.3.1"
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
issue2test = "issue2test.main:main"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "issue2test/version.txt"
